# Siachen-Snowfall-Analysis

./: LICENCE  README.md  main.py  pyproject.toml
data/processed/: combined_all_spatial_data.csv  siachen_daily_spatial_mean_snowfall.csv
data/raw/: siachen_snowfall_daily_raw.json
data/result/: siachen_annual_snowfall.csv
notebooks/: analysis.ipynb
